# lost-star-badminton

./: .env_example  .gitignore  Cargo.toml  README.md  Rocket.toml
client/: import_map.json
client/components/: user.tsx
client/lib/: config.ts
client/pages/: showuser.tsx  userform.tsx
client/style/: form.css  userdata.css
json/: gym.json  location.json  reservations.json  user.json
src/: db.rs  errors.rs  main.rs
src/data/: court.rs  location.rs  models.rs  user.rs
src/data/models/: court.rs  location.rs  mod.rs  user.rs
src/models/: location.rs  user.rs
src/scratch_bin/: scratch.rs
