[package]
name = "lost-star-badminton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.18"
serde = { version = "1", features = ["derive"] }

# mongodb = "2.0.2"
[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"]
# features = ["async-std-runtime"]

[dependencies.passwords]
version = "3.1.8"
features = ["crypto"]