[package]
name = "lost-star-badminton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "3"
# actix-cors = "0.5.4"
# rocket = "0.5.0-rc.1"
# rocket_cors = "0.5.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }

derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.17"
serde = { version = "1", features = ["derive"] }
djangohashers = "1.5.1"
serde_json = "1"
serde_derive = "1.0.132"
phone-number-verifier = "1.0.1"
r2d2 = "0.8.9"
# r2d2-mongodb = "0.2.2"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


# mongodb = "2.0.2"
[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime", "bson-uuid-0_8", "bson-chrono-0_4"]
# features = ["async-std-runtime"]

